# AndroidHardeningProtector

./: README.md  requirements.txt
native/: decryptor.c
protector/: dex_processor.py  main.py
stub/: CMakeLists.txt  StubApplication.java
